# MaxLinkBot

./: .gitignore  AGENTS.md  AI_FIRST.md  Dockerfile  README.md  docker-compose.yml  info.txt  justfile  pyproject.toml
.github/workflows/: docker.yml
.linters/: check_imports.py  metrics.py
adr/: 0001-max-library-selection.md  0002-clean-architecture-python.md  0003-maxapi-python-selection.md  README.md
docs/: README.md  architecture.md  configuration.md  conventions.md  glossary.md  golden-principles.md  maxapi-python-contract.md  pumax-contract.md  quality-grades.md
docs/exec-plans/: 2026-03-21-maxlinkbot-v1.md  README.md
docs/exec-plans/active/: MLB-001-repo-bootstrap.md  MLB-002-domain-and-sqlite.md  MLB-003-max-auth-and-binding.md  MLB-004-start-and-reconcile.md  MLB-005-max-to-telegram.md  MLB-006-telegram-to-max.md  MLB-007-background-health-and-audit.md  MLB-008-docker-ops-and-acceptance.md  MLB-009-telegram-auth-flow.md  MLB-010-maxapi-python-websocket-auth.md  (+6 more)
docs/plans/: 2026-03-21-maxlinkbot-v1.md
docs/runbooks/: RB-01-initial-setup.md  RB-02-reauth-required.md  RB-03-no-new-messages.md  RB-04-topic-creation.md  RB-05-sqlite-integrity.md  README.md
scripts/: healthcheck.sh
src/: healthcheck.py  main.py
tests/: test_main.py
tests/application/: test_authorization.py  test_health.py  test_inbound.py  test_outbound.py  test_reconcile.py
tests/domain/: test_bindings_models.py
tests/infrastructure/: test_bindings_integration.py  test_chats_integration.py  test_max_adapter.py  test_telegram_adapter.py
tests/interface/: test_handlers.py
(+41 files in other folders)
